--- a/index.html
+++ b/index.html
@@ -2,38 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bulldog Plumbing</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet" />
+
+  <!-- Tailwind CSS with font config -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+            heading: ['Poppins', 'sans-serif']
+          }
+        }
+      }
+    }
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="favicon.ico">
+
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
+
   <!-- Hero Section -->
   <section class="bg-blue-800 text-white py-16 px-6 text-center">
-    <h1 class="text-4xl md:text-5xl font-bold mb-4">Bulldog Plumbing</h1>
-    <p class="text-lg md:text-xl mb-6">Fast. Reliable. Professional.</p>
-    <a href="#contact" class="bg-white text-blue-800 px-6 py-2 rounded-full font-semibold shadow-md hover:bg-gray-100">Book a Job</a>
+    <div class="flex items-center justify-center gap-4">
+      <img src="assets/img/logo.png" alt="Bulldog Plumbing Logo" class="w-12 h-12 md:w-16 md:h-16 object-contain" />
+      <h1 class="text-4xl md:text-5xl font-heading font-bold">Bulldog Plumbing</h1>
+    </div>
+    <p class="text-lg md:text-xl mt-4 mb-6">Fast. Reliable. Professional.</p>
+    <a href="#contact" class="bg-white text-blue-800 px-6 py-2 rounded-full font-semibold shadow-md hover:bg-gray-100 inline-block">Book a Job</a>
   </section>
 
   <!-- About Section -->
   <section class="py-12 px-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold mb-4 text-blue-800">About Us</h2>
-    <p>We’re a Cape Town-based plumbing company with a passion for reliable service and quality workmanship. From leak detection to full bathroom installations, we’ve got you covered.</p>
+    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800">About Us</h2>
+    <div class="flex flex-col md:flex-row items-center gap-6">
+      <div class="md:w-1/2 font-sans text-gray-700">
+        <p>We’re a Cape Town-based plumbing company with a passion for reliable service and quality workmanship. From leak detection to full bathroom installations, we’ve got you covered.</p>
+      </div>
+      <img src="assets/img/about.jpg" alt="About Bulldog Plumbing" class="rounded shadow-md md:w-1/2 object-cover" />
+    </div>
   </section>
 
   <!-- Services Section -->
   <section class="bg-white py-12 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold mb-6 text-blue-800 text-center">Our Services</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <div class="bg-gray-50 p-6 rounded shadow hover:shadow-lg">
+    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800 text-center">Our Services</h2>
+    <div class="flex flex-col md:flex-row gap-6">
+      <div class="service-card bg-gray-50 p-6 rounded shadow hover:shadow-lg md:w-1/3">
+        <img src="assets/img/services.jpg" alt="Services Image" class="rounded mb-4 object-cover w-full h-40" />
         <h3 class="text-xl font-semibold text-blue-700 mb-2">Leak Detection</h3>
         <p>We find and fix leaks quickly to prevent further damage.</p>
       </div>
-      <div class="bg-gray-50 p-6 rounded shadow hover:shadow-lg">
+      <div class="service-card bg-gray-50 p-6 rounded shadow hover:shadow-lg md:w-1/3">
         <h3 class="text-xl font-semibold text-blue-700 mb-2">Pipe Repairs</h3>
         <p>From burst pipes to low pressure — we handle it all.</p>
       </div>
-      <div class="bg-gray-50 p-6 rounded shadow hover:shadow-lg">
+      <div class="service-card bg-gray-50 p-6 rounded shadow hover:shadow-lg md:w-1/3">
         <h3 class="text-xl font-semibold text-blue-700 mb-2">Bathroom Installations</h3>
         <p>Full-service renovations or fittings for new homes.</p>
       </div>
@@ -41,25 +71,35 @@
   </section>
 
   <!-- Booking Form -->
-  <section id="contact" class="py-12 px-6 bg-blue-50">
-    <h2 class="text-2xl font-bold mb-4 text-blue-800 text-center">Book a Job</h2>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="max-w-3xl mx-auto space-y-4">
-      <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border border-gray-300 rounded" />
-      <input type="tel" name="phone" placeholder="Phone Number" required class="w-full p-3 border border-gray-300 rounded" />
-      <input type="email" name="email" placeholder="Email Address" required class="w-full p-3 border border-gray-300 rounded" />
-      <textarea name="message" placeholder="What can we help you with?" rows="4" required class="w-full p-3 border border-gray-300 rounded"></textarea>
-      <button type="submit" class="w-full bg-blue-800 text-white py-3 rounded hover:bg-blue-700">Submit Request</button>
-    </form>
+  <section id="contact" class="py-12 px-6 bg-blue-50 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800 text-center">Book a Job</h2>
+    <div class="flex flex-col md:flex-row gap-6 items-center">
+      <div class="md:w-1/2">
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="space-y-4 bg-white p-6 rounded shadow">
+          <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border border-gray-300 rounded" />
+          <input type="tel" name="phone" placeholder="Phone Number" required class="w-full p-3 border border-gray-300 rounded" />
+          <input type="email" name="email" placeholder="Email Address" required class="w-full p-3 border border-gray-300 rounded" />
+          <textarea name="message" placeholder="What can we help you with?" rows="4" required class="w-full p-3 border border-gray-300 rounded"></textarea>
+          <button type="submit" class="w-full bg-blue-800 text-white py-3 rounded hover:bg-blue-700 transition">Submit Request</button>
+        </form>
+      </div>
+      <img src="assets/img/booking.jpg" alt="Booking" class="rounded shadow-md md:w-1/2 object-cover" />
+    </div>
   </section>
 
   <!-- Testimonials -->
   <section class="py-12 px-6 bg-white max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold mb-6 text-blue-800 text-center">What Our Clients Say</h2>
-    <blockquote class="italic border-l-4 border-blue-800 pl-4 mb-4">"Reliable and professional. Bulldog Plumbing sorted out my bathroom leak the same day!" – Amanda, Durbanville</blockquote>
-    <blockquote class="italic border-l-4 border-blue-800 pl-4">"Top-notch service and friendly staff." – Mark, Kuils River</blockquote>
+    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800 text-center">What Our Clients Say</h2>
+    <div class="flex flex-col md:flex-row gap-6">
+      <blockquote class="testimonial italic border-l-4 border-blue-800 pl-4 md:w-1/2">"Reliable and professional. Bulldog Plumbing sorted out my bathroom leak the same day!" – Amanda, Durbanville</blockquote>
+      <blockquote class="testimonial italic border-l-4 border-blue-800 pl-4 md:w-1/2">"Top-notch service and friendly staff." – Mark, Kuils River</blockquote>
+    </div>
+    <div class="mt-6 flex justify-center">
+      <img src="assets/img/testimonial.jpg" alt="Happy Clients" class="rounded shadow-md max-w-xs object-cover" />
+    </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact Section -->
   <section class="bg-blue-800 text-white py-10 px-6 text-center">
     <p class="mb-2">📞 083 456 7890 | 📧 bulldogplumbing@gmail.com</p>
     <p>Cape Town, Western Cape</p>
@@ -69,5 +109,6 @@
   <footer class="bg-gray-900 text-gray-300 text-center py-4 text-sm">
     © 2025 Bulldog Plumbing. All rights reserved.
   </footer>
+
 </body>
 </html>
