--- a/index.html
+++ b/index.html
@@ -9,106 +9,111 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Urbanist:wght@600;700&display=swap" rel="stylesheet" />
 
   <!-- Tailwind CSS with font config -->
   <script>
     tailwind.config = {
       theme: {
         extend: {
+          colors: {
+            primary: '#60a5fa', // Soft blue (Tailwind's sky-400)
+            accent: '#1e40af'  // Slightly deeper for buttons
+          },
           fontFamily: {
-            sans: ['Inter', 'sans-serif'],
-            heading: ['Poppins', 'sans-serif']
+            sans: ['Open Sans', 'sans-serif'],
+            heading: ['Urbanist', 'sans-serif']
           }
         }
       }
     }
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
+
+<body class="bg-white text-gray-800 font-sans">
 
   <!-- Hero Section -->
-  <section class="bg-blue-800 text-white py-16 px-6 text-center">
-    <div class="flex items-center justify-center gap-4">
-      <img src="assets/img/logo.png" alt="Bulldog Plumbing Logo" class="w-12 h-12 md:w-16 md:h-16 object-contain" />
+  <section class="bg-primary text-white py-16 px-6 text-center shadow-md">
+    <div class="flex flex-col md:flex-row items-center justify-center gap-4">
+      <img src="assets/img/logo.png" alt="Bulldog Plumbing Logo" class="w-16 h-16 object-contain" />
       <h1 class="text-4xl md:text-5xl font-heading font-bold">Bulldog Plumbing</h1>
     </div>
-    <p class="text-lg md:text-xl mt-4 mb-6">Fast. Reliable. Professional.</p>
-    <a href="#contact" class="bg-white text-blue-800 px-6 py-2 rounded-full font-semibold shadow-md hover:bg-gray-100 inline-block">Book a Job</a>
+    <p class="text-lg md:text-xl mt-4">Reliable plumbing services in Cape Town</p>
+    <a href="#contact" class="mt-6 inline-block bg-white text-primary font-semibold px-6 py-2 rounded-full shadow hover:bg-blue-100 transition">Book a Job</a>
   </section>
 
   <!-- About Section -->
-  <section class="py-12 px-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800">About Us</h2>
-    <div class="flex flex-col md:flex-row items-center gap-6">
-      <div class="md:w-1/2 font-sans text-gray-700">
-        <p>We’re a Cape Town-based plumbing company with a passion for reliable service and quality workmanship. From leak detection to full bathroom installations, we’ve got you covered.</p>
+  <section class="py-16 px-6 max-w-6xl mx-auto">
+    <div class="grid md:grid-cols-2 gap-10 items-center">
+      <div>
+        <h2 class="text-3xl font-heading font-bold text-primary mb-4">About Us</h2>
+        <p class="text-gray-700 text-lg leading-relaxed">At Bulldog Plumbing, we pride ourselves on honest work, fair pricing, and reliable service. With years of experience serving homes and businesses across Cape Town, we specialize in everything from emergency repairs to full bathroom installations.</p>
       </div>
-      <img src="assets/img/about.jpg" alt="About Bulldog Plumbing" class="rounded shadow-md md:w-1/2 object-cover" />
+      <img src="assets/img/about.jpg" alt="About Us" class="rounded-lg shadow-md object-cover" />
     </div>
   </section>
 
   <!-- Services Section -->
-  <section class="bg-white py-12 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800 text-center">Our Services</h2>
-    <div class="flex flex-col md:flex-row gap-6">
-      <div class="service-card bg-gray-50 p-6 rounded shadow hover:shadow-lg md:w-1/3">
-        <img src="assets/img/services.jpg" alt="Services Image" class="rounded mb-4 object-cover w-full h-40" />
-        <h3 class="text-xl font-semibold text-blue-700 mb-2">Leak Detection</h3>
-        <p>We find and fix leaks quickly to prevent further damage.</p>
-      </div>
-      <div class="service-card bg-gray-50 p-6 rounded shadow hover:shadow-lg md:w-1/3">
-        <h3 class="text-xl font-semibold text-blue-700 mb-2">Pipe Repairs</h3>
-        <p>From burst pipes to low pressure — we handle it all.</p>
-      </div>
-      <div class="service-card bg-gray-50 p-6 rounded shadow hover:shadow-lg md:w-1/3">
-        <h3 class="text-xl font-semibold text-blue-700 mb-2">Bathroom Installations</h3>
-        <p>Full-service renovations or fittings for new homes.</p>
+  <section class="bg-gray-50 py-16 px-6">
+    <div class="max-w-6xl mx-auto text-center">
+      <h2 class="text-3xl font-heading font-bold text-primary mb-10">Our Services</h2>
+      <div class="grid md:grid-cols-3 gap-8 text-left">
+        <div class="bg-white p-6 rounded shadow hover:shadow-lg transition">
+          <img src="assets/img/services.jpg" alt="Leak Detection" class="mb-4 rounded object-cover h-40 w-full" />
+          <h3 class="text-xl font-semibold text-accent mb-2">Leak Detection</h3>
+          <p>We quickly locate and fix leaks to prevent further damage to your home or business.</p>
+        </div>
+        <div class="bg-white p-6 rounded shadow hover:shadow-lg transition">
+          <h3 class="text-xl font-semibold text-accent mb-2">Pipe Repairs</h3>
+          <p>We fix burst pipes, low water pressure, or corrosion issues with lasting results.</p>
+        </div>
+        <div class="bg-white p-6 rounded shadow hover:shadow-lg transition">
+          <h3 class="text-xl font-semibold text-accent mb-2">Bathroom Installations</h3>
+          <p>New builds or renovations, our team handles plumbing for modern, functional bathrooms.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Booking Form -->
-  <section id="contact" class="py-12 px-6 bg-blue-50 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800 text-center">Book a Job</h2>
-    <div class="flex flex-col md:flex-row gap-6 items-center">
-      <div class="md:w-1/2">
+  <section id="contact" class="py-16 px-6 max-w-6xl mx-auto">
+    <div class="grid md:grid-cols-2 gap-10 items-center">
+      <div>
+        <h2 class="text-3xl font-heading font-bold text-primary mb-6">Book a Job</h2>
         <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="space-y-4 bg-white p-6 rounded shadow">
           <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border border-gray-300 rounded" />
           <input type="tel" name="phone" placeholder="Phone Number" required class="w-full p-3 border border-gray-300 rounded" />
           <input type="email" name="email" placeholder="Email Address" required class="w-full p-3 border border-gray-300 rounded" />
           <textarea name="message" placeholder="What can we help you with?" rows="4" required class="w-full p-3 border border-gray-300 rounded"></textarea>
-          <button type="submit" class="w-full bg-blue-800 text-white py-3 rounded hover:bg-blue-700 transition">Submit Request</button>
+          <button type="submit" class="w-full bg-accent text-white py-3 rounded hover:bg-blue-900 transition">Submit Request</button>
         </form>
       </div>
-      <img src="assets/img/booking.jpg" alt="Booking" class="rounded shadow-md md:w-1/2 object-cover" />
+      <img src="assets/img/booking.jpg" alt="Booking" class="rounded-lg shadow-md object-cover" />
     </div>
   </section>
 
   <!-- Testimonials -->
-  <section class="py-12 px-6 bg-white max-w-4xl mx-auto">
-    <h2 class="text-2xl font-heading font-bold mb-6 text-blue-800 text-center">What Our Clients Say</h2>
-    <div class="flex flex-col md:flex-row gap-6">
-      <blockquote class="testimonial italic border-l-4 border-blue-800 pl-4 md:w-1/2">"Reliable and professional. Bulldog Plumbing sorted out my bathroom leak the same day!" – Amanda, Durbanville</blockquote>
-      <blockquote class="testimonial italic border-l-4 border-blue-800 pl-4 md:w-1/2">"Top-notch service and friendly staff." – Mark, Kuils River</blockquote>
-    </div>
-    <div class="mt-6 flex justify-center">
-      <img src="assets/img/testimonial.jpg" alt="Happy Clients" class="rounded shadow-md max-w-xs object-cover" />
+  <section class="py-16 px-6 bg-gray-100">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-heading font-bold text-primary mb-6">What Clients Say</h2>
+      <blockquote class="italic text-gray-700 mb-4 border-l-4 border-primary pl-4">"Reliable and professional. Bulldog Plumbing sorted out my bathroom leak the same day!" – Amanda, Durbanville</blockquote>
+      <blockquote class="italic text-gray-700 border-l-4 border-primary pl-4">"Top-notch service and friendly staff." – Mark, Kuils River</blockquote>
+      <div class="mt-6">
+        <img src="assets/img/testimonial.jpg" alt="Happy Clients" class="rounded shadow-md mx-auto max-w-sm object-cover" />
+      </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="bg-blue-800 text-white py-10 px-6 text-center">
-    <p class="mb-2">📞 083 456 7890 | 📧 bulldogplumbing@gmail.com</p>
-    <p>Cape Town, Western Cape</p>
+  <!-- Contact Info -->
+  <section class="bg-accent text-white py-10 text-center">
+    <p class="mb-2 text-lg">📞 083 456 7890 | 📧 bulldogplumbing@gmail.com</p>
+    <p class="text-sm">Cape Town, Western Cape</p>
   </section>
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-gray-300 text-center py-4 text-sm">
     © 2025 Bulldog Plumbing. All rights reserved.
   </footer>
-
 </body>
 </html>
